:bug: Fix missing footer

--- a/index.html
+++ b/index.html
@@ -442,8 +442,73 @@
         </div>
     </section>
 
-    <!-- Footer Component -->
-    <div data-component="footer"></div>
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <div class="footer-logo">
+                        <a href="index.html">
+                            <img src="assets/branding/LogoFullWhite.svg" alt="LaCorbeille STUDIO" width="200" height="40">
+                        </a>
+                    </div>
+                    <div class="footer-social">
+                        <a href="https://www.instagram.com/lacorbeille.studio" target="_blank" rel="noopener" aria-label="Instagram">
+                            <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                                <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+                            </svg>
+                        </a>
+                        <a href="https://x.com/LaCorbeilleSTD/" target="_blank" rel="noopener" aria-label="X (Twitter)">
+                            <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                                <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+                            </svg>
+                        </a>
+                        <a href="https://discord.com/invite/hmPzS4k/" target="_blank" rel="noopener" aria-label="Discord">
+                            <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                                <path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0 12.64 12.64 0 0 0-.617-1.25.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057 19.9 19.9 0 0 0 5.993 3.03.078.078 0 0 0 .084-.028 14.09 14.09 0 0 0 1.226-1.994.076.076 0 0 0-.041-.106 13.107 13.107 0 0 1-1.872-.892.077.077 0 0 1-.008-.128 10.2 10.2 0 0 0 .372-.292.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127 12.299 12.299 0 0 1-1.873.892.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028 19.839 19.839 0 0 0 6.002-3.03.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03zM8.02 15.33c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.956-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.956 2.418-2.157 2.418zm7.975 0c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.419 2.157-2.419 1.21 0 2.176 1.096 2.157 2.42 0 1.333-.946 2.418-2.157 2.418z"/>
+                            </svg>
+                        </a>
+                        <a href="https://www.facebook.com/people/LaCorbeille-Studio/61565357266191/" target="_blank" rel="noopener" aria-label="Facebook">
+                            <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                                <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                            </svg>
+                        </a>
+                        <a href="https://www.linkedin.com/company/lacorbeille-studio/" target="_blank" rel="noopener" aria-label="LinkedIn">
+                            <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                                <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+                            </svg>
+                        </a>
+                        <a href="https://lacorbeille-studio.itch.io/" target="_blank" rel="noopener" aria-label="Itch.io">
+                            <svg width="24" height="22" fill="currentColor" viewBox="0 0 36 33">
+                                <path d="M4.69345 0.204082C3.12314 1.15416 0.0293432 4.77583 0 5.72561V7.29776C0 9.29061 1.82808 11.0422 3.48788 11.0422C5.48087 11.0422 7.1414 9.35908 7.14155 7.36145C7.14155 9.35908 8.74516 11.0422 10.7383 11.0422C12.7316 11.0422 14.2837 9.35908 14.2837 7.36145C14.2837 9.35908 15.9888 11.0422 17.982 11.0422H18.018C20.0113 11.0422 21.7165 9.35908 21.7165 7.36145C21.7165 9.35908 23.2687 11.0422 25.2617 11.0422C27.2548 11.0422 28.8585 9.35908 28.8585 7.36145C28.8585 9.35908 30.5193 11.0422 32.5121 11.0422C34.1719 11.0422 36 9.29091 36 7.29776V5.72561C35.9707 4.77568 32.8769 1.15386 31.3069 0.204082C26.4262 0.0294651 23.0426 -0.000734157 17.9999 1.33482e-05C12.9572 0.000461852 6.08241 0.080744 4.69315 0.204082H4.69345ZM14.2584 10.1036C14.0679 10.4421 13.8318 10.7518 13.5571 11.0238C12.8048 11.7734 11.7735 12.238 10.6366 12.238C9.5426 12.2391 8.49181 11.8029 7.70993 11.0232C7.43733 10.7511 7.23017 10.4602 7.04046 10.1214L7.03958 10.122C6.85002 10.4614 6.58594 10.7521 6.31275 11.0245C5.53056 11.8037 4.47989 12.2395 3.38606 12.2385C3.24903 12.2385 3.10642 12.1999 2.9911 12.1595C2.83089 13.8597 2.76325 15.4844 2.73933 16.6691L2.73904 16.6758C2.73611 17.2774 2.73317 17.7721 2.73024 18.4594C2.76105 22.0265 2.38355 30.0209 4.27369 31.9852C7.20273 32.6811 12.5925 32.9981 17.9997 33H18.0006C23.4077 32.9981 28.7974 32.6811 31.7265 31.9852C33.6166 30.0207 33.2391 22.0263 33.2699 18.4592C33.2667 17.7721 33.264 17.2774 33.2611 16.6757L33.2607 16.6689C33.2369 15.484 33.1693 13.8594 33.009 12.1592C32.8937 12.1996 32.7513 12.2382 32.6141 12.2382C31.5203 12.2392 30.4696 11.8034 29.6874 11.0242C29.4142 10.7518 29.1501 10.4612 28.9604 10.1217L28.9595 10.1211C28.7697 10.4599 28.5627 10.7509 28.2901 11.0229C27.5082 11.8025 26.4575 12.2387 25.3635 12.2376C24.2268 12.2376 23.1954 11.7726 22.443 11.0232C22.1683 10.7512 21.9323 10.4415 21.7417 10.103C21.5532 10.4411 21.3193 10.7508 21.0469 11.0232C20.2648 11.8028 19.2139 12.2388 18.1199 12.2377C18.0803 12.2377 18.0406 12.2359 18.001 12.2347H18C17.9604 12.2359 17.9208 12.2377 17.8807 12.2377C16.7867 12.2388 15.7358 11.8028 14.9537 11.0233C14.6813 10.751 14.4474 10.4413 14.2589 10.1032L14.2584 10.1036ZM11.2528 14.0639L11.2525 14.0654H11.2547C12.445 14.0679 13.5024 14.0654 14.8126 15.5224C15.8437 15.4122 16.9212 15.3572 17.9996 15.3589H18.0004C19.0788 15.3574 20.1563 15.4122 21.1876 15.5224C22.4977 14.0652 23.5551 14.0678 24.7454 14.0654H24.7475L24.7472 14.0639C25.3095 14.0639 27.5591 14.0639 29.1266 18.55L30.8104 24.7042C32.058 29.2825 30.4109 29.3945 28.3562 29.3985C25.3092 29.283 23.6222 27.0282 23.6222 24.7737C21.9355 25.0554 19.9679 25.1962 18.0003 25.1963H17.9994C16.0317 25.1963 14.064 25.0554 12.3775 24.7737C12.3775 27.0282 10.6903 29.283 7.64346 29.3985C5.58885 29.3945 3.94182 29.2827 5.18949 24.7042L6.87364 18.5501C8.44116 14.064 10.6908 14.064 11.2531 14.064L11.2528 14.0639ZM17.9996 17.5894V17.5903C17.9966 17.5933 14.7919 20.5923 14.2158 21.659L16.3144 21.5733V23.4382C16.3144 23.5255 17.1565 23.4899 17.9996 23.4502H18.0004C18.8432 23.4899 19.6855 23.5255 19.6855 23.4382V21.5733L21.7841 21.659C21.2078 20.5923 18.0003 17.5903 18.0003 17.5903V17.5894L17.9999 17.5897L17.9996 17.5894Z"/>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+                <div class="footer-section">
+                    <h4>Navigation</h4>
+                    <ul>
+                        <li><a href="#accueil">Accueil</a></li>
+                        <li><a href="#apropos">À Propos</a></li>
+                        <li><a href="#jeux">Jeux</a></li>
+                        <li><a href="#actualites">Actualités</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>Ressources</h4>
+                    <ul>
+                        <li><a href="press.html">Press</a></li>
+                        <li><a href="#actualites">Blog</a></li>
+                        <li><a href="#contact">Support</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 LaCorbeille STUDIO. Tous droits réservés.</p>
+            </div>
+        </div>
+    </footer>
 
     <!-- Game Detail Modal -->
     <div id="gameModal" class="modal">
