:sparkles: Add team management system with dynamic loading of team members and social links

--- a/press.html
+++ b/press.html
@@ -100,6 +100,7 @@
 
     <!-- Scripts -->
     <script src="scripts/components.js" defer></script>
+    <script src="scripts/modules/teamManager.js" defer></script>
     <script src="scripts/main.js" defer></script>
 </head>
 <body>
@@ -227,26 +228,7 @@
                 <div class="press-section">
                     <h2>Équipe</h2>
                     <div class="team-list">
-                        <div class="team-member">
-                            <h4>Alex Martin</h4>
-                            <p class="role">Game Director & Fondateur</p>
-                            <p class="bio">10 ans d'expérience dans l'industrie du jeu vidéo, passionné par la narration interactive.</p>
-                        </div>
-                        <div class="team-member">
-                            <h4>Sarah Chen</h4>
-                            <p class="role">Lead Developer</p>
-                            <p class="bio">Experte en développement Unity et C#, spécialisée dans l'optimisation et l'architecture de jeux.</p>
-                        </div>
-                        <div class="team-member">
-                            <h4>Marcus Rodriguez</h4>
-                            <p class="role">Artist Director</p>
-                            <p class="bio">Artiste visuel avec une expertise en art conceptuel et direction artistique pour jeux indépendants.</p>
-                        </div>
-                        <div class="team-member">
-                            <h4>Emma Thompson</h4>
-                            <p class="role">Sound Designer</p>
-                            <p class="bio">Compositrice et sound designer, créatrice d'ambiances sonores immersives.</p>
-                        </div>
+                        <!-- Le contenu sera chargé dynamiquement depuis data/team.json -->
                     </div>
                 </div>
 
