:sparkles: Update press texts, assets, code comments and links

--- a/press.html
+++ b/press.html
@@ -154,9 +154,8 @@
                             </div>
                         </div>
                         <p class="studio-description">
-                            LaCorbeille STUDIO est un studio de développement de jeux vidéo indépendant français, 
-                            spécialisé dans la création d'expériences interactives uniques et innovantes. 
-                            Nous combinons créativité artistique et excellence technique pour donner vie à des univers captivants.
+                            LaCorbeille STUDIO est un studio de développement de jeux vidéo indépendant français. 
+                            Nous combinons créativité et experiences interactives innovantes pour donner vie à des univers captivants.
                         </p>
                     </div>
                 </div>
@@ -180,7 +179,7 @@
                             </div>
                             <h4>Logo Principal</h4>
                             <p>Format vectoriel haute résolution</p>
-                            <a href="#" class="download-btn">Télécharger SVG</a>
+                            <a href="https://drive.google.com/file/d/1zdN7URsDYV4YZx2kXJslAyyA9zlf9MQT/view?usp=sharing" class="download-btn" target="_blank" rel="noopener noreferrer">Télécharger SVG</a>
                         </div>
                         <div class="logo-item">
                             <div class="logo-preview dark">
@@ -191,34 +190,34 @@
                             </div>
                             <h4>Logo Inversé</h4>
                             <p>Pour fonds sombres</p>
-                            <a href="#" class="download-btn">Télécharger SVG</a>
+                            <a href="https://drive.google.com/file/d/1ERulaV2w43ZYfUtzkMHEtwbumE9DQiyy/view?usp=sharing" class="download-btn" target="_blank" rel="noopener noreferrer">Télécharger SVG</a>
                         </div>
                     </div>
                 </div>
 
                 <!-- Screenshots -->
                 <div class="press-section">
-                    <h2>Captures d'écran</h2>
+                    <h2>Assets des Jeux</h2>
                     <div class="screenshots-grid">
                         <div class="screenshot-item">
                             <img src="assets/games/LeLAB/LeLAB - Banner.jpg" alt="LeLAB Screenshot">
                             <div class="screenshot-info">
                                 <h4>LeLAB</h4>
-                                <a href="#" class="download-btn">Télécharger HD</a>
+                                <a href="https://drive.google.com/file/d/1H5_FUZoOnSip5_WElwUm9wn9X_SnXmf_/view?usp=sharing" class="download-btn" target="_blank" rel="noopener noreferrer">Télécharger</a>
                             </div>
                         </div>
                         <div class="screenshot-item">
                             <img src="assets/games/Rice Battle/RiceBattle - Banner.jpg" alt="Rice Battle Screenshot">
                             <div class="screenshot-info">
                                 <h4>Rice Battle</h4>
-                                <a href="#" class="download-btn">Télécharger HD</a>
+                                <a href="https://drive.google.com/file/d/1r6UPIegvZSYWchuiw9Z3g7rodElrN9f-/view?usp=sharing" class="download-btn" target="_blank" rel="noopener noreferrer">Télécharger</a>
                             </div>
                         </div>
                         <div class="screenshot-item">
                             <img src="assets/games/A Little Adventure/ALittleAdventure - Banner.jpg" alt="A Little Adventure Screenshot">
                             <div class="screenshot-info">
                                 <h4>A Little Adventure</h4>
-                                <a href="#" class="download-btn">Télécharger HD</a>
+                                <a href="https://drive.google.com/file/d/1OttR2njHwYtxQEvlzMQo-H866w2t1mnm/view?usp=sharing" class="download-btn" target="_blank" rel="noopener noreferrer">Télécharger</a>
                             </div>
                         </div>
                     </div>
@@ -259,9 +258,10 @@
                         <p>Téléchargez toutes les ressources en un seul fichier ZIP</p>
                         <ul>
                             <li>Logos en haute résolution (PNG, SVG)</li>
-                            <li>Captures d'écran des jeux</li>
+                            <li>Assets et captures d'écran des jeux</li>
                             <li>Informations détaillées du studio</li>
                             <li>Photos de l'équipe</li>
+                            <li>Brandbook</li>
                         </ul>
                         <a href="https://drive.google.com/file/d/19BLUa7sSfQHJMSVENMNamBFYqbqVPh_s/view?usp=sharing" class="btn btn-primary download-all-btn" target="_blank" rel="noopener noreferrer">Télécharger le Pack Complet</a>
                     </div>
