:speech_balloon: Revise studio description, mission, and vision for clarity and engagement

--- a/index.html
+++ b/index.html
@@ -199,20 +199,21 @@
             <div class="section-header">
                 <h2 class="section-title">À Propos du Studio</h2>
                 <p class="section-subtitle">
-                    LaCorbeille STUDIO est un studio indépendant passionné par la création de jeux vidéo innovants
+                    LaCorbeille est un studio indépendant passionné par la création de jeux vidéo avec des expériences uniques.
                 </p>
             </div>
             <div class="about-content">
                 <div class="about-text">
                     <h3>Notre Mission</h3>
                     <p>
-                        Nous créons des expériences de jeu mémorables qui allient créativité artistique et excellence technique. 
-                        Notre objectif est de développer des titres qui marquent durablement ceux qui y jouent.
+                        Nous concevons des jeux auxquels nous aimerions nous-mêmes jouer : créatifs, bien pensés, avec une vraie identité.
+                        Notre but, c’est de marquer les esprits sans jamais perdre de vue le fun et l’humain.
                     </p>
                     <h3>Notre Vision</h3>
                     <p>
-                        Nous croyons que les jeux vidéo sont un art capable de toucher les émotions, de raconter des histoires 
-                        profondes et de créer des liens entre les joueurs.
+                        Pour nous, le jeu vidéo est un terrain d’expression artistique, de narration et de lien.
+                        Il peut faire rêver, faire réfléchir ou simplement rassembler.
+                        Et ça, on veut le cultiver en restant proches de notre communauté.
                     </p>
                 </div>
                 <div class="about-stats">
