--- a/press.html
+++ b/press.html
@@ -76,8 +76,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     
-    <!-- Web App Manifest -->
-    <link rel="manifest" href="manifest.json">
+    <!-- Web App Meta -->
     <meta name="theme-color" content="#1a73e8">
     
     <!-- Preconnect for Performance -->
@@ -227,7 +226,7 @@
                 <div class="press-section">
                     <h2>Équipe</h2>
                     <div class="team-list">
-                        <!-- Le contenu sera chargé dynamiquement depuis data/team.json -->
+                        <!-- Le contenu sera chargé dynamiquement depuis data/team.js -->
                     </div>
                 </div>
 
