:bug: Fix text length

--- a/press.html
+++ b/press.html
@@ -112,7 +112,7 @@
                     </a>
                 </div>
                 <nav class="nav">
-                    <a href="index.html" class="btn btn-outline">← Retour à l'accueil</a>
+                    <a href="index.html" class="btn btn-outline">← Retour</a>
                 </nav>
             </div>
         </div>
